<resources>
    <string name="app_name">GlobalMedic</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="login_label">Login</string>
    <string name="user_label_hint">User</string>
    <string name="password_label_hint">password</string>
    <string name="login_now_button">Login Now</string>
    <string name="dont_you_remember_your_password">Dont you remember your password?</string>
    <string name="modify_password">Modify password</string>
    <string name="change_your_passsword">Change your passsword</string>
    <string name="your_new_password">Your new password</string>
    <string name="repet_password">Repet password</string>
    <string name="change">Change</string>
    <string name="password_wrong">Password wrong</string>
    <string name="reset_your_passsword_label">Reset your password</string>
    <string name="your_email_input">Your email</string>
    <string name="request">Request</string>
    <string name="message_reset_pass">* A code will be sent to your email account.</string>
    <string name="validate_code">Validate code</string>
    <string name="insert_your_token">Insert your token</string>
    <string name="your_code">Your code</string>
    <string name="validate">Validate</string>
</resources>
