<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.joselopez04.globalmedic.Reset_password">

    <LinearLayout
        android:layout_width="match_parent"
        android:id="@+id/cont_icos"
        android:orientation="vertical"
        android:background="@drawable/background_splash"
        android:layout_height="wrap_content">

        <IconTextView
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:textColor="#fff"
            android:textSize="90sp"
            android:gravity="center"
            android:layout_marginTop="40dp"
            android:layout_gravity="center"
            android:text="{fa-thumbs-up}"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-light"
            android:textSize="22sp"
            android:textColor="#fff"
            android:layout_gravity="center"
            android:layout_marginTop="15dp"
            android:text="@string/validate_code"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:id="@+id/cont_form"
        android:layout_marginTop="30dp"
        android:orientation="vertical"
        android:padding="20dp"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-light"
            android:textSize="22sp"
            android:textColor="@color/colorAccent"
            android:layout_marginTop="15dp"
            android:text="@string/insert_your_token"/>

        <EditText
            android:id="@+id/userEdit"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="20dp"
            android:elevation="2dp"
            android:fontFamily="sans-serif-light"
            android:hint="@string/your_code"
            android:inputType="textEmailAddress"
            android:padding="8dp"
            android:scrollHorizontally="false"
            android:textAppearance="?android:textAppearanceMedium"
            android:textColor="@color/colorAccent"
            android:textColorHint="@color/colorAccent"
            android:textSize="14sp"
            android:textStyle="normal" />

        <Button
            android:id="@+id/button"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginTop="30dp"
            android:background="@drawable/boton_trasparente_background"
            android:fontFamily="sans-serif-light"
            android:text="@string/validate"
            android:textAllCaps="false"
            android:textColor="#e3494747"
            android:onClick="goValidatePass"
            android:textStyle="bold" />


    </LinearLayout>
</LinearLayout>
