<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:background="@drawable/background_splash"
    android:layout_height="fill_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">


        <IconTextView
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:textColor="#fff"
            android:textSize="90sp"
            android:gravity="center"
            android:layout_marginTop="40dp"
            android:layout_gravity="center"
            android:text="{fa-user}"/>

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="32dp"
            android:fontFamily="sans-serif-light"
            android:text="@string/login_label"
            android:textColor="#fff"
            android:textSize="20sp" />


        <LinearLayout
                android:layout_marginTop="30dp"
                android:layout_width="match_parent"
                android:padding="15dp"
                android:orientation="vertical"
                android:layout_height="fill_parent">

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:hint="@string/user_label_hint"
                    android:elevation="2dp"
                    android:id="@+id/userEdit"
                    android:textAppearance="?android:textAppearanceMedium"
                    android:padding="8dp"
                    android:scrollHorizontally="false"
                    android:textSize="14sp"
                    android:textColor="#fff"
                    android:textStyle="normal"
                    android:inputType="textAutoComplete"
                    android:textColorHint="#fff"
                    android:fontFamily="sans-serif-light"
                    android:background="@drawable/edit_text_background"/>

                <EditText
                    android:id="@+id/passEdit"
                    android:textColorHighlight="#fff"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:textAppearance="?android:textAppearanceMedium"
                    android:elevation="2dp"
                    android:textColor="#fff"
                    android:layout_marginTop="10dp"
                    android:padding="8dp"
                    android:password="true"
                    android:textStyle="normal"
                    android:background="@drawable/edit_text_background"
                    android:fontFamily="sans-serif-light"
                    android:hint="@string/password_label_hint"
                    android:inputType="textPassword"
                    android:textColorHint="#fff"
                    android:textSize="14sp" />


                <Button
                    android:layout_width="match_parent"
                    android:layout_height="45dp"
                    android:textStyle="bold"
                    android:onClick="goHome"
                    android:textColor="#d4cfcf"
                    android:fontFamily="sans-serif-light"
                    android:text="@string/login_now_button"
                    android:layout_marginTop="30dp"
                    android:textAllCaps="false"
                    android:background="@drawable/boton_trasparente_background" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="16sp"
                    android:layout_gravity="center"
                    android:layout_marginTop="32dp"
                    android:onClick="goResetPass"
                    android:text="@string/dont_you_remember_your_password"
                    android:fontFamily="sans-serif-light"
                    android:textColor="#fff"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="13sp"
                    android:layout_gravity="center|bottom"
                    android:layout_marginTop="10dp"
                    android:gravity="center|bottom"
                    android:text="Term and conditions"
                    android:fontFamily="sans-serif-light"
                    android:textColor="#fff"/>


            </LinearLayout>

    </LinearLayout>
</ScrollView>